--- a/graficos.html
+++ b/graficos.html
@@ -23,11 +23,11 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="#sobre">Sobre</a>
+                        <a class="nav-link" href="index.html#sobre">Sobre</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="#contatos">Contatos</a>
+                        <a class="nav-link" href="index.html#contatos">Contatos</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="graficos.html">Graficos</a>
